--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -351,8 +351,8 @@ h6, .h6 {
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  border: 0;
-  border-top: 1px solid rgba(0, 0, 0, 0.1); }
+  width: 60%;
+  border-top: 1px solid rgba(255, 255, 255, 0.41); }
 
 small,
 .small {
@@ -8229,8 +8229,8 @@ h1, h2, h3, h4, h5,
         right: 0;
         content: '';
         background: rgba(0, 0, 0, 0.3);
-        background: url('../img/cemetery_300.jpg') left top no-repeat;
-        background-size: cover;
+        background: url('../img/cemetery_300.jpg') right top no-repeat;
+        background-size: auto;
       opacity: 0.1;}
 
     #colorlib-main-nav .colorlib-table .colorlib-table-cell {
@@ -8364,7 +8364,7 @@ background-color: rgba(0, 0, 0, 0.43);}
   header .colorlib-navbar-brand {
     float: left; }
     header .colorlib-navbar-brand .colorlib-logo {
-      font-size: 17px;
+      font-size: 20px;
       color: #fff;
       letter-spacing: 5px;
       font-weight: 600;
@@ -8372,8 +8372,8 @@ background-color: rgba(0, 0, 0, 0.43);}
       display: inline-block;
       margin-bottom: 0;
       line-height: 1.5;
-      font-family: "Poppins", Arial, sans-serif;
-      text-transform: uppercase; }
+      font-family: 'UnifrakturMaguntia', cursive;
+       }
       header .colorlib-navbar-brand .colorlib-logo span {
         font-size: 11px;
         display: block;
