--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -307,7 +307,7 @@ h1, h2, h3, h4, h5, h6,
   line-height: 1.2; }
 
 h1, .h1 {
-  font-size: 2.5rem; }
+  font-size: 2rem; }
 
 h2, .h2 {
   font-size: 2rem; }
@@ -349,8 +349,8 @@ h6, .h6 {
   line-height: 1.2; }
 
 hr {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin:1em 0 1em 0;
+  align: left;
   width: 60%;
   border-top: 1px solid rgba(255, 255, 255, 0.41); }
 
@@ -2033,18 +2033,19 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #212529;
+  color: #ffffff;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: transparent;
+  background-color: #271745;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
+  margin-top: 1em;
   border-radius: 0.25rem;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -8411,7 +8412,7 @@ background-color: rgba(0, 0, 0, 0.43);}
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #fff;
+    background: #673ab7;
     -webkit-transition: all .2s ease-out;
     -o-transition: all .2s ease-out;
     transition: all .2s ease-out; }
@@ -8422,7 +8423,7 @@ background-color: rgba(0, 0, 0, 0.43);}
       content: '';
       width: 30px;
       height: 2px;
-      background: #fff;
+      background: #673ab7;
       position: absolute;
       left: 0;
       -webkit-transition: 0.2s;
@@ -8491,7 +8492,7 @@ background-color: rgba(0, 0, 0, 0.43);}
   top: 0;
   right: 0;
   display: block;
-  margin: 0 auto;
+  margin-left: auto;
   cursor: pointer;
   margin-top: 0; }
   @media (max-width: 767.98px) {
