--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2032,15 +2032,15 @@ textarea.form-control {
 
 .btn {
   display: inline-block;
-  font-weight: 400;
-  color: #ffffff;
+  font-weight: 600;
+  color: #000000;
   text-align: center;
   vertical-align: middle;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-color: #271745;
+  background-image: linear-gradient(#673ab7, #314da3);
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
@@ -2058,7 +2058,8 @@ textarea.form-control {
       -o-transition: none;
       transition: none; } }
   .btn:hover {
-    color: #212529;
+    color: #ffffff;
+    opacity: 0.7;
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
