--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,7 +3,7 @@
 
 section.bg-home{
   position: relative;
-
+  margin-bottom: 20px;
 }
 section{
   margin-bottom: 2em;
@@ -25,7 +25,10 @@ section.bg-home::after{
   width: 100%;
   height: 100%;
 
+}
 
+.menu-icons i{
+  margin: 0.5em;
 }
 .go-store{
   display: none;
@@ -93,8 +96,7 @@ section.bg-home::after{
 .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation{
 font-size: 2em;
     }
-    .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover .fa-artstation:hover{
-font-size: 2.5em;
+    .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover, .fa-artstation:hover{
 opacity: 0.7;
     }
 #privacy{
@@ -103,6 +105,9 @@ opacity: 0.7;
 @media only screen and (max-width:400px ) {
   #footer{
     margin-top: 20em;
+  }
+  section.bg-home{
+    padding-bottom: 3em;
   }
 }
   @media only screen and (min-width:780px && max-width:1000px){
@@ -125,9 +130,6 @@ opacity: 0.7;
 @media only screen and (min-width:780px) {
   .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation{
   font-size: 3em;
-      }
-      .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover, .fa-artstation:hover{
-  font-size: 3.5em;
       }
 
   .go-store{
