--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8373,7 +8373,7 @@ background-color: rgba(0, 0, 0, 0.43);}
       display: inline-block;
       margin-bottom: 0;
       line-height: 1.5;
-      font-family: 'UnifrakturMaguntia', cursive;
+      font-family: 'AngerStyles', cursive;
        }
       header .colorlib-navbar-brand .colorlib-logo span {
         font-size: 11px;
