--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;600;800&display=swap');
-
+@font-face {
+  font-family: 'AngerStyles';
+  src: url('../font/AngerStyles.woff') format('woff');
+}
 section.bg-home{
   position: relative;
   margin-bottom: 20px;
@@ -46,7 +49,7 @@ section.bg-home::after{
 
 .title{
   font-weight: bolder;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   letter-spacing: 0.2rem;
 }
 .textGradient {
@@ -62,14 +65,14 @@ section.bg-home::after{
   width: 80%;
 }
 .h1{
-  font-family: 'Barlow Semi Condensed', sans-serif;
+  font-family: 'AngerStyles';
 }
 .article-secondary{
   padding: 2em 0;
 }
 
 .footer-logo{
-  font-family: 'UnifrakturMaguntia', cursive;
+  font-family: 'AngerStyles', cursive;
   font-size: 3rem;
 }
 #footer{
@@ -102,10 +105,10 @@ section.bg-home::after{
   color:inherit;
 }
 
-.fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation{
+.fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
 font-size: 2em;
     }
-    .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover, .fa-artstation:hover{
+    .fa-facebook:hover, .fa-instagram:hover, .fa-deviantart:hover, .fa-artstation:hover, .fa-envelope:hover{
 opacity: 0.7;
     }
 #privacy{
@@ -137,7 +140,7 @@ opacity: 0.7;
 
 
 @media only screen and (min-width:780px) {
-  .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation{
+  .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
   font-size: 3em;
       }
 
