--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2032,7 +2032,7 @@ textarea.form-control {
 
 .btn {
   display: inline-block;
-  font-weight: 600;
+  font-weight: 500;
   color: #000000;
   text-align: center;
   vertical-align: middle;
@@ -2058,7 +2058,6 @@ textarea.form-control {
       -o-transition: none;
       transition: none; } }
   .btn:hover {
-    color: #ffffff;
     opacity: 0.7;
     text-decoration: none; }
   .btn:focus, .btn.focus {
@@ -8136,12 +8135,10 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 body {
-  font-family: 'Barlow Semi Condensed', sans-serif;
-  font-size: 16px;
-  line-height: 1.8;
-  font-weight: normal;
-  background-color: rgba(0, 0, 0, 0.94);
-  color: gray; }
+font-family: 'Barlow Semi Condensed', sans-serif;
+background-color: rgba(0, 0, 0, 0.94);
+  color: gray;
+font-weight: 200;}
   body.menu-show {
     overflow: hidden;
     position: fixed;
@@ -8283,15 +8280,14 @@ h1, h2, h3, h4, h5,
     transform: scale(1); }
   #colorlib-main-nav .logo {
     font-size: 30px;
-    color: #fff;
-    text-transform: uppercase;
     letter-spacing: 2px;
     font-weight: 700;
     position: relative;
     display: inline-block;
     margin-bottom: 0;
     line-height: 1.5;
-    font-family: "Poppins", Arial, sans-serif; }
+    font-family: 'AngerStyles';
+ }
     #colorlib-main-nav .logo span {
       font-size: 14px;
       display: block;
@@ -8413,7 +8409,8 @@ background-color: rgba(0, 0, 0, 0.43);}
     font: bold 14px/.4 Helvetica;
     text-transform: uppercase;
     text-indent: -55px;
-    background: #673ab7;
+    background: linear-gradient(#673ab7, #314da3);
+;
     -webkit-transition: all .2s ease-out;
     -o-transition: all .2s ease-out;
     transition: all .2s ease-out; }
@@ -8424,7 +8421,8 @@ background-color: rgba(0, 0, 0, 0.43);}
       content: '';
       width: 30px;
       height: 2px;
-      background: #673ab7;
+      background: linear-gradient(#673ab7, #314da3);
+;
       position: absolute;
       left: 0;
       -webkit-transition: 0.2s;
@@ -8490,10 +8488,10 @@ background-color: rgba(0, 0, 0, 0.43);}
   float: right;
   z-index: 1003;
   position: relative;
-  top: 0;
+  top: -3px;
   right: 0;
   display: block;
-  margin-left: auto;
+  margin-left: 0;
   cursor: pointer;
   margin-top: 0; }
   @media (max-width: 767.98px) {
@@ -8507,7 +8505,8 @@ background-color: rgba(0, 0, 0, 0.43);}
   .hero-wrap .slider-text .desc h1 {
     font-size: 6vw;
     font-weight: 700;
-    color: #673ab7;
+    color: linear-gradient(#673ab7, #314da3);
+;
     text-transform: uppercase; }
   .hero-wrap .slider-text .desc h3 {
     color: rgba(255, 255, 255, 0.8);
