--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=UnifrakturMaguntia&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@300;600;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@200;300;400;500;700&display=swap');
 @font-face {
   font-family: 'AngerStyles';
   src: url('../font/AngerStyles.woff') format('woff');
@@ -34,13 +33,14 @@ section.bg-home::after{
   margin: 0.5em;
 }
 .go-store{
-  display: none;
-  color: rgba(103, 58, 183, 0.63);
+display: block;
+color: rgba(103, 58, 183, 0.63);
+
   background: transparent;
-  font-size: 0.5rem;
-  font-weight: bolder;
+  font-size: 0.9rem;
+  font-weight: 500;
   position: relative;
-  margin: 8px 0 0 0;
+  margin: 0 1em 0 auto;
 }
 .go-store:hover{
   color: #673ab7;
@@ -129,9 +129,7 @@ opacity: 0.7;
   }
 
   @media only screen and (min-width:500px) {
-    .go-store{
-      display: block;
-    }
+
 
     #colorlib-main-nav .logo {
       font-size: 40px;
