--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -114,6 +114,14 @@ opacity: 0.7;
 #privacy{
   margin-top: 2em;
 }
+@media only screen and (orientation: landscape)  {
+  .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
+  font-size: 1.3em;
+  }
+  #colorlib-main-nav .logo {
+      font-size: 24px;
+  }
+}
 @media only screen and (max-width:400px ) {
   #footer{
     margin-top: 20em;
@@ -128,7 +136,7 @@ opacity: 0.7;
     }
   }
 
-  @media only screen and (min-width:500px) {
+  @media only screen and (min-width:500px) and (orientation: portrait) {
 
 
     #colorlib-main-nav .logo {
@@ -140,7 +148,7 @@ opacity: 0.7;
 @media only screen and (min-width:780px) {
   .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
   font-size: 3em;
-      }
+  }
 
   .go-store{
     font-size: 1.5rem;
