--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -3,7 +3,9 @@
   font-family: 'AngerStyles';
   src: url('../font/AngerStyles.woff') format('woff');
 }
-
+body {
+    overflow-x: hidden !important;
+}
 body, hr{
   color: rgba(255, 255, 255, 0.54);
   border-color: rgba(255, 255, 255, 0.54);
@@ -34,6 +36,14 @@ section.bg-home::after{
 
 }
 
+.triangle{
+  position: relative;
+  overflow: hidden;
+  max-width: 20em;
+  right: 0;
+  left:
+  opacity: 0.5;
+}
 .menu-icons i{
   margin: 0.5em;
 }
