--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -36,12 +36,15 @@ section.bg-home::after{
 
 }
 
+
 .triangle{
   position: relative;
   overflow: hidden;
   max-width: 30em;
   opacity: 0.5;
 }
+
+
 .menu-icons i{
   margin: 0.5em;
 }
@@ -65,6 +68,9 @@ color: rgba(103, 58, 183, 0.63);
   /*text-transform: uppercase;*/
   letter-spacing: 0.2rem;
 }
+.title-large{
+  font-size: 4rem;
+}
 .textGradient {
   color: #ff8c00; /* fix for not webkit browsers */
   background: linear-gradient(#673ab7, #314da3);
@@ -78,7 +84,7 @@ color: rgba(103, 58, 183, 0.63);
   width: 80%;
 }
 
-.h1{
+.h1, .h1-large{
   font-family: 'AngerStyles';
 }
 .article-secondary{
