--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -72,7 +72,7 @@ color: rgba(103, 58, 183, 0.63);
   font-size: 4rem;
 }
 .textGradient {
-  color: #ff8c00; /* fix for not webkit browsers */
+  color: #673ab7; /* fix for not webkit browsers */
   background: linear-gradient(#673ab7, #314da3);
   background-size: cover;
   -webkit-background-clip: text;
@@ -83,6 +83,25 @@ color: rgba(103, 58, 183, 0.63);
 .article{
   width: 80%;
 }
+/* CAROUSEL SLIDE HOME*/
+#carousel{
+  opacity: 0.5;
+
+}
+.carousel-item img{
+  clip-path: polygon(10% 25%, 35% 25%, 35% 0%, 65% 0%, 65% 25%, 90% 25%, 90% 50%, 65% 50%, 65% 100%, 35% 100%, 35% 50%, 10% 50%);
+
+}
+/*
+.carousel-indicators li{
+  background-image: linear-gradient(#673ab7, #314da3);
+}
+*/
+
+
+
+
+
 
 .h1, .h1-large{
   font-family: 'AngerStyles';
@@ -155,6 +174,9 @@ opacity: 0.7;
 
     #colorlib-main-nav .logo {
       font-size: 40px;
+    }
+    .carousel-item img{
+      max-width: 70%;
     }
   }
 
