--- a/assets/css/lightgallery.css
+++ b/assets/css/lightgallery.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'lg';
-  src: url("../font/fonts-lightgallery/lg.woff2?io9a6k") format("woff2"), url("../font/fonts-lightgallery/lg.ttf?io9a6k") format("truetype"), url("../font/fonts-lightgallery/lg.woff?io9a6k") format("woff"), url("../font/fonts-lightgallery/lg.svg?io9a6k#lg") format("svg");
+  src: url("../font/fonts-lightgallery/lg.woff2") format("woff2"), url("../font/fonts-lightgallery/lg.ttf") format("truetype"), url("../font/fonts-lightgallery/lg.woff") format("woff"), url("../font/fonts-lightgallery/lg.svg") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: block;
