shop page created

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3460,6 +3460,7 @@ input[type="button"].btn-block {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
   margin-right: 1rem;
+  font-family: 'AngerStyles';
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap; }
@@ -3499,24 +3500,6 @@ input[type="button"].btn-block {
   -ms-flex-align: center;
   align-items: center; }
 
-.navbar-toggler {
-  padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
-  line-height: 1;
-  background-color: transparent;
-  border: 1px solid transparent;
-  border-radius: 0.25rem; }
-  .navbar-toggler:hover, .navbar-toggler:focus {
-    text-decoration: none; }
-
-.navbar-toggler-icon {
-  display: inline-block;
-  width: 1.5em;
-  height: 1.5em;
-  vertical-align: middle;
-  content: "";
-  background: no-repeat center center;
-  background-size: 100% 100%; }
 
 @media (max-width: 575.98px) {
   .navbar-expand-sm > .container,
@@ -8359,7 +8342,8 @@ background-color: rgba(0, 0, 0, 0.43);}
       padding: 1em 0;
       position: absolute; } }
   header .colorlib-navbar-brand {
-    float: left; }
+    float: left;
+  }
     header .colorlib-navbar-brand .colorlib-logo {
       font-size: 20px;
       color: #fff;
