--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -196,6 +196,7 @@ opacity: 0.7;
           text-decoration: none;
 
     }
+
             /* Setting the stroke to green using rgb values (0, 128, 0) */
 
   .navbar-toggler-icon {
@@ -357,6 +358,23 @@ h5 {
   }
 
 
+@media only screen and (max-width:768px) {
+
+  .sidebar-collapse{
+    position: absolute;
+    height: 100vh;
+    right: 0;
+    padding-right: 2em;
+    top:7rem;
+    background-color: black;
+  }
+  .navbar-toggle.collapse .navbar-toggler-icon:before {
+    content: '\f00d';
+}
+
+}
+
+
 @media only screen and (min-width:768px) {
   .fa-facebook, .fa-instagram, .fa-deviantart, .fa-artstation, .fa-envelope{
   font-size: 3em;
@@ -365,6 +383,7 @@ h5 {
   .go-store{
     font-size: 1.5rem;
   }
+
   header .colorlib-navbar-brand .colorlib-logo {
     font-size: 2.5rem;
     font-family: 'AngerStyles';
