update login and register pages

--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -327,7 +327,138 @@ h5 {
 	height: 35px;
 }
 
+.navbar-toggler>.close {
+    display:inline;
+}
+.navbar-toggler.collapsed>.close, .navbar-toggler:not(.collapsed)>.navbar-toggler-icon {
+    display:none;
+}
 
+
+/*    LOGIN:   ;*/
+.login-body{
+background-image: url('g');
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
+}
+
+
+
+.card{
+height: 370px;
+margin-top: auto;
+margin-bottom: auto;
+width: 400px;
+background-color: rgba(0,0,0,0.5) !important;
+}
+
+.social_icon span{
+font-size: 60px;
+margin-left: 10px;
+color: #673ab7; /* fix for not webkit browsers */
+background: linear-gradient(#673ab7, #314da3);
+background-size: cover;
+-webkit-background-clip: text;
+-webkit-text-fill-color: transparent;
+background-clip: text;
+text-fill-color: transparent;
+
+}
+
+.social_icon span:hover{
+color: white;
+cursor: pointer;
+}
+
+.card-header h3{
+color: white;
+}
+
+.social_icon{
+position: absolute;
+right: 20px;
+top: -45px;
+}
+
+.input-group-prepend span{
+width: 50px;
+background-color: #673ab7;
+color: black;
+border:0 !important;
+}
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.remember{
+color: white;
+}
+
+.remember input
+{
+width: 20px;
+height: 20px;
+margin-left: 15px;
+margin-right: 5px;
+}
+
+.login_btn{
+color: black;
+width: 100px;
+}
+
+.login_btn:hover{
+color: black;
+background-color: white;
+}
+
+.links{
+color: white;
+}
+
+.links a{
+margin-left: 4px;
+}
+
+/*    REGISTER     */
+
+.divider-text {
+    position: relative;
+    text-align: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.divider-text span {
+    padding: 7px;
+    font-size: 12px;
+    position: relative;
+    z-index: 2;
+}
+.divider-text:after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    border-bottom: 1px solid #ddd;
+    top: 55%;
+    left: 0;
+    z-index: 1;
+}
+
+.btn-facebook {
+    background-color: #405D9D;
+    color: #fff;
+}
+.btn-twitter {
+    background-color: #42AEEC;
+    color: #fff;
+}
+.fa-envelope.signup{
+  font-size: inherit;
+}
 /*        MEDIA           */
 
 
@@ -359,18 +490,16 @@ h5 {
 
 
 @media only screen and (max-width:768px) {
-
   .sidebar-collapse{
     position: absolute;
     height: 100vh;
     right: 0;
     padding-right: 2em;
-    top:7rem;
+    padding-top: 2em;
+    top:4rem;
     background-color: black;
   }
-  .navbar-toggle.collapse .navbar-toggler-icon:before {
-    content: '\f00d';
-}
+
 
 }
 
